# AI_LOCAL_CLI_WEB_UI

./: .env.example  .gitignore  .keep_data_dirs.txt  .yamllint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_STANDARDIZE_CLEAN.sh  Makefile  README.md  SAFE_REFACTOR_STACK.sh  compose.yaml  stack_minify_v1.sh
.github/: CODEOWNERS  pull_request_template.md
_labs/langgraph_agent/: langgraph_agent.py  pyproject.toml
_logs/: PR_BODY_logcodex.md  README.md  READ_AND_PURGE.sh  _last_smoke_fb_inject_path.txt  _latest_audit  audit_run.txt  bench_hybrid.csv  bench_tail_20250911T103447-0300.txt  chat_4001_20250911T103447-0300.txt  chat_hybrid_back2.txt  chat_hybrid_back_local.txt  chat_hybrid_fb.txt  chat_hybrid_local.txt  chat_hybrid_local2.txt  chat_router_fb2.txt  clean_by_keep_apply.txt  clean_by_keep_dry.txt  codex_changelog_20250911T053938.txt  codex_ci_last_stash.txt  compose_config_err.txt  compose_config_result.txt  compose_config_status.txt  compose_litellm_block.yaml  compose_resolved_full.yaml  compose_resolved_pre_fix.yaml  diag_git_state.txt  du_root_d1.txt  git_last_commit.txt  git_push_output.txt  git_status_after_apply.txt  git_switch_main_safe_20250911T185813-0300.txt  guard_v1.txt  impactui_ports.json  last_chat_matrix.txt  last_smoke.txt  last_smoke_after_apply.txt  last_smoke_after_minify.txt  last_smoke_litellm_finalize.txt  last_wait_after_apply.txt  last_wait_after_minify.txt  (+27 more)
_realign/: plan_20250910T032132.txt
ai_gateway/: BENCH_NOW.sh  FB_RECOVER.sh  FINAL_AUDIT.sh  HEALTH_DASH.sh  KEEP_AIGW.list  MODEL_PULL.sh  OPENWEBUI_PROVIDER.md  (+30 more)
(+375 files in other folders)
